# words

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
src/: CMakeLists.txt  main.cpp
src/cmake/: third_party.cmake  version.cmake
src/tests/: CMakeLists.txt  wordsTests.cpp
src/wordslib/: CMakeLists.txt  Common.h  Parser.cpp  Parser.h  WordsInfo.cpp  WordsInfo.h
